--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
 body{
-  background: white;
+  background-color:black;
+}
+
+p{
+  color: white;
+}
+
+h1{
+  color:white;
+}
+
+h3{
+  color:white;
+}
+
+ul{
+  color:white;
+}
+
+li{
+  color:white;
 }
