--- a/style.css
+++ b/style.css
@@ -1,23 +1,34 @@
 body{
-  background-color:black;
+  background-color: #383838;
+  font-family:Helvetica;
 }
 
 p{
   color: white;
+  font-family:Helvetica;
 }
 
 h1{
   color:white;
+  font-family:Helvetica;
 }
 
 h3{
   color:white;
+  font-family:Helvetica;
+}
+
+ol{
+  color:white;
+  font-family:Helvetica;
 }
 
 ul{
   color:white;
+  font-family:Helvetica;
 }
 
 li{
   color:white;
+  font-family:Helvetica;
 }
